[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Tiles/house.png" type="Texture" id=1]
[ext_resource path="res://Scripts/House.gd" type="Script" id=2]
[ext_resource path="res://Font/Size10Outline.tres" type="DynamicFont" id=3]
[ext_resource path="res://Assets/Buttons/XButtonPressed.png" type="Texture" id=4]
[ext_resource path="res://Assets/Buttons/XButton.png" type="Texture" id=5]
[ext_resource path="res://Assets/Buttons/XButtonHover.png" type="Texture" id=6]
[ext_resource path="res://Font/Size20.tres" type="DynamicFont" id=7]
[ext_resource path="res://Assets/Buttons/BuyButtonHover.png" type="Texture" id=8]
[ext_resource path="res://Assets/Buttons/BuyButtonPress.png" type="Texture" id=9]
[ext_resource path="res://Assets/Buttons/BuyButton.png" type="Texture" id=10]
[ext_resource path="res://Assets/GUI/PanelBackground.png" type="Texture" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 130.75, 65.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 77.5, 17 )

[node name="House" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 8.25, 103 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 3.8147e-06, -3.8147e-06 )
scale = Vector2( 5.33333, 5.33333 )
texture = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Controller" type="Node2D" parent="CanvasLayer"]
visible = false

[node name="Panel" type="NinePatchRect" parent="CanvasLayer/Controller"]
margin_left = 112.0
margin_top = 111.0
margin_right = 920.0
margin_bottom = 568.0
texture = ExtResource( 11 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PoorNotif" type="Label" parent="CanvasLayer/Controller"]
visible = false
modulate = Color( 1, 0.301961, 0.301961, 1 )
margin_left = 360.0
margin_top = 456.0
margin_right = 664.0
margin_bottom = 476.0
custom_fonts/font = ExtResource( 7 )
text = "Not Enough Resources!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="CanvasLayer/Controller"]
margin_left = 488.0
margin_top = 504.0
margin_right = 504.0
margin_bottom = 520.0
rect_scale = Vector2( 3, 3 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuyButton3" type="TextureButton" parent="CanvasLayer/Controller"]
margin_left = 184.0
margin_top = 408.0
margin_right = 232.0
margin_bottom = 440.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 44, 24.5 )
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="CanvasLayer/Controller"]
margin_left = 256.0
margin_top = 400.0
margin_right = 960.0
margin_bottom = 420.0
custom_fonts/font = ExtResource( 7 )
text = "5 Cloth - Coat Upgrade (Reduces Heat Decay)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuyButton2" type="TextureButton" parent="CanvasLayer/Controller"]
margin_left = 184.0
margin_top = 296.0
margin_right = 232.0
margin_bottom = 328.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 44, 24.5 )
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CanvasLayer/Controller"]
margin_left = 256.0
margin_top = 296.0
margin_right = 960.0
margin_bottom = 316.0
custom_fonts/font = ExtResource( 7 )
text = "5 Wood - Campfire Upgrade (Heat Meter Increase)"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuyButton1" type="TextureButton" parent="CanvasLayer/Controller"]
margin_left = 184.0
margin_top = 192.0
margin_right = 232.0
margin_bottom = 224.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 44, 24.5 )
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Controller"]
margin_left = 256.0
margin_top = 192.0
margin_right = 960.0
margin_bottom = 212.0
custom_fonts/font = ExtResource( 7 )
text = "5 Coal - Torch Upgrade (Delays Heat Decay)"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="CanvasLayer/Controller"]
margin_left = 440.0
margin_top = 136.0
margin_right = 584.0
margin_bottom = 156.0
custom_fonts/font = ExtResource( 7 )
text = "Upgrades"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Notif" type="Label" parent="."]
visible = false
margin_left = -80.0
margin_top = 56.0
margin_right = 80.0
margin_bottom = 72.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Press E to interact!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -2.5, 111 )
shape = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_House_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_House_body_exited"]
[connection signal="pressed" from="CanvasLayer/Controller/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Controller/BuyButton3" to="." method="_on_BuyButton3_pressed"]
[connection signal="pressed" from="CanvasLayer/Controller/BuyButton2" to="." method="_on_BuyButton2_pressed"]
[connection signal="pressed" from="CanvasLayer/Controller/BuyButton1" to="." method="_on_BuyButton1_pressed"]
